[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chartjs_pl"
version="0.0.1"
authors=[
    { name="Dean MacGregor", email="powertrading121@gmail.com"}
]
description="chart js with polars"
readme = "README.md"
requires-python = ">=3.7"
dependencies=[
    "polars"
    ]